Fix responsive layout issue in ProductHero
The main component element didn't have its 'border-box' style rule set to 'border-box' so its padding was being added on top of the max width of 1280px, making it too big for the largest breakpoint.

--- a/packages/frontend/src/features/ProductHero/index.module.css
+++ b/packages/frontend/src/features/ProductHero/index.module.css
@@ -3,6 +3,8 @@
 }
 
 .product-hero-width-controller {
+    box-sizing: border-box;
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: start;
